Manon Modif Accueil

--- a/accueil.html
+++ b/accueil.html
@@ -27,12 +27,19 @@
             <p>ECE In est le réseau social professionnel de l’ECE Paris. Connectez-vous avec vos pairs, découvrez des opportunités de carrière et restez informé des événements importants de notre communauté.</p>
             
             <h3>Événement de la semaine</h3>
-            <p>Ne manquez pas notre événement phare cette semaine : <strong>Journée Portes Ouvertes</strong>. Rejoignez-nous pour découvrir nos programmes, rencontrer nos professeurs et échanger avec nos étudiants.</p>
             
             <div class="carousel">
                 <div class="carousel-images">
-                    <img src="jpo.jpg" alt="Journée Portes Ouvertes">
+                    <img src="jpo.png" alt="Journée Portes Ouvertes">
                 </div>
+            </div>
+            <div class="évènement">
+                <img src="welcome_day.png" alt="Welcome Day">
+                <p>Participez aux <strong>Vecome Day de l'ECE</strong> <a href="https://www.facebook.com/eceingenieurs/posts/454884837190611">En savoir plus</a></p>
+            </div>
+            <div class="event">
+                <img src="IA.jpg" alt="Intelligence Lab">
+                <p>Assistez à la <strong>Conférence sur l'Intelligence Artificielle</strong> avec des experts du domaine. <a href="https://www.facebook.com/eceingenieurs/posts/452394170773011">En savoir plus</a></p>
             </div>
         </div>
         <div class="footer">
