--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
         </div>
         <div class="navigation">
             <a href="accueil.html">Accueil</a>
-            <a href="mon_reseau.html">Mon Reseau</a>
+            <a href="mon_reseau.html">Mon Reseau</a>    
             <a href="vous.html">Vous</a>
             <a href="notifications.html">Notifications</a>
             <a href="messagerie.html">Messagerie</a>
@@ -23,7 +23,7 @@
         </div>
         <div class="section">
             <h2>Connexion</h2>
-            <form id="loginForm" action="vous.html" method="post">
+            <form id="loginForm" action="accueil.html" method="post">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
                 <br>
