Manon, modifs images

--- a/vous.html
+++ b/vous.html
@@ -6,12 +6,14 @@
     <title>Votre Profil | ECE In</title>
     <link rel="stylesheet" href="vous.css">
     <script src="vous.js" defer></script>
+    <link rel="icon" type="image/vnd.icon" href="C:\wamp64\www\ING2_TD9_EQUIPE2_WD\ECE_LOGO_2021_web.ico">
+
 </head>
 <body>
     <div class="wrapper">
         <div class="header">
             <div>ECE In: Social Media Professionnel de l’ECE Paris</div>
-            <img src="logo.png" alt="ECE In Logo">
+            <img src="C:\wamp64\www\ING2_TD9_EQUIPE2_WD\ECE_LOGO_2021_web.png" alt="ECE In Logo">
         </div>
         <div class="navigation">
             <a href="accueil.html">Accueil</a>
