Lukas : modif nom favicon

--- a/messagerie.html
+++ b/messagerie.html
@@ -7,7 +7,7 @@
     <title>Accueil | ECE In</title>
     <link rel="stylesheet" href="accueil.css">
     <link rel="stylesheet" href="carousel.css">
-    <link rel="icon" type="image/vnd.icon" href="C:\wamp64\www\PROJET\ECE_LOGO_2021_web.ico">
+    <link rel="icon" type="image/vnd.icon" href="C:\wamp64\www\ING2_TD9_EQUIPE2_WD\ECE_LOGO_2021_web.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messagerie</title>
@@ -30,7 +30,7 @@
     <div class="wrapper">
         <div class="header">
             <div>ECE In: Social Media Professionnel de l’ECE Paris</div>
-            <img src="C:\wamp64\www\PROJET\ECE_LOGO_2021_web.png" alt="ECE In Logo">
+            <img src="C:\wamp64\www\ING2_TD9_EQUIPE2_WD\ECE_LOGO_2021_web.png" alt="ECE In Logo">
         </div>
         <div class="navigation">
             <a href="accueil.html" class="active">Accueil</a>
@@ -40,33 +40,6 @@
             <a href="messagerie.html">Messagerie</a>
             <a href="emplois.html">Emplois</a>
         </div>
-        <div class="section">
-            <h2>Bienvenue sur ECE In</h2>
-            <p>ECE In est le réseau social professionnel de l’ECE Paris. Connectez-vous avec vos pairs, découvrez des opportunités de carrière et restez informé des événements importants de notre communauté.</p>
-            
-            <h3>Événement de la semaine</h3>
-            
-            <div class="carousel">
-                <div class="carousel-images">
-                    <img src="jpo.png" alt="Journée Portes Ouvertes">
-                </div>
-            </div>
-            <div class="évènement">
-                <img src="welcome_day.png" alt="Welcome Day">
-                <p>Participez aux <strong>Vecome Day de l'ECE</strong> <a href="https://www.facebook.com/eceingenieurs/posts/454884837190611">En savoir plus</a></p>
-            </div>
-            <div class="event">
-                <img src="IA.jpg" alt="Intelligence Lab">
-                <p>Assistez à la <strong>Conférence sur l'Intelligence Artificielle</strong> avec des experts du domaine. <a href="https://www.facebook.com/eceingenieurs/posts/452394170773011">En savoir plus</a></p>
-            </div>
-        </div>
-        <div class="footer">
-            <p>Nous contacter :</p>
-            <p>Email : <a href="mailto:admissions-paris@ece.fr">admissions-paris@ece.fr</a></p>
-            <p>Téléphone : <a href="tel:0123456789">01.44.39.06.00</a></p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5250.73258943166!2d2.2859909763052793!3d48.85122517133121!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6701b4f58251b%3A0x167f5a60fb94aa76!2sECE%20-%20Ecole%20d&#39;ing%C3%A9nieurs%20-%20Campus%20de%20Paris!5e0!3m2!1sfr!2sfr!4v1716882068768!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-    </div>
     <script src="carousel.js"></script>
     <div class="container mt-5">
         <h1 class="text-center">Messagerie</h1>
