--- a/messagerie.html
+++ b/messagerie.html
@@ -7,7 +7,7 @@
     <title>Accueil | ECE In</title>
     <link rel="stylesheet" href="accueil.css">
     <link rel="stylesheet" href="carousel.css">
-    <link rel="icon" type="image/vnd.icon" href="C:\wamp64\www\ING2_TD9_EQUIPE2_WD\ECE_LOGO_2021_web.ico">
+    <link rel="icon" type="image/vnd.icon" href="ECE_LOGO_2021_web.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messagerie</title>
@@ -30,7 +30,7 @@
     <div class="wrapper">
         <div class="header">
             <div>ECE In: Social Media Professionnel de l’ECE Paris</div>
-            <img src="C:\wamp64\www\ING2_TD9_EQUIPE2_WD\ECE_LOGO_2021_web.png" alt="ECE In Logo">
+            <img src="ECE_LOGO_2021_web.png" alt="ECE In Logo">
         </div>
         <div class="navigation">
             <a href="accueil.html" class="active">Accueil</a>
