--- a/emploi3.html
+++ b/emploi3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emplois | ECE In</title>
+    <link rel="icon" type="image/vnd.icon" href="C:\wamp64\www\ING2_TD9_EQUIPE2_WD\ECE_LOGO_2021_web.ico">
     <link rel="stylesheet" href="emplois.css">
 </head>
 <body>
