--- a/vous.html
+++ b/vous.html
@@ -6,14 +6,14 @@
     <title>Votre Profil | ECE In</title>
     <link rel="stylesheet" href="vous.css">
     <script src="vous.js" defer></script>
-    <link rel="icon" type="image/vnd.icon" href="C:\wamp64\www\ING2_TD9_EQUIPE2_WD\ECE_LOGO_2021_web.ico">
+    <link rel="icon" type="image/vnd.icon" href="ECE_LOGO_2021_web.ico">
 
 </head>
 <body>
     <div class="wrapper">
         <div class="header">
             <div>ECE In: Social Media Professionnel de l’ECE Paris</div>
-            <img src="C:\wamp64\www\ING2_TD9_EQUIPE2_WD\ECE_LOGO_2021_web.png" alt="ECE In Logo">
+            <img src="ECE_LOGO_2021_web.png" alt="ECE In Logo">
         </div>
         <div class="navigation">
             <a href="accueil.html">Accueil</a>
@@ -63,14 +63,12 @@
         </div>
     </div>
 
-    <!-- Le reste du contenu de la page -->
 
     <script>
         window.onload = function() {
             const params = new URLSearchParams(window.location.search);
             const pseudo = params.get('pseudo');
             if (pseudo) {
-                // Afficher le pseudo où vous voulez sur la page
                 document.getElementById('pseudoPlaceholder').innerText = "Pseudo : " + pseudo;
             }
         }
@@ -79,7 +77,7 @@
             const selectedFile = event.target.files[0];
             const profileImage = document.getElementById('profileImage');
             profileImage.onload = function() {
-                URL.revokeObjectURL(profileImage.src); // Révoque l'URL pour libérer la mémoire
+                URL.revokeObjectURL(profileImage.src); 
             }
             profileImage.src = URL.createObjectURL(selectedFile);
         }
