elia modif emplois

--- a/emploi1.html
+++ b/emploi1.html
@@ -22,6 +22,7 @@
             <a href="emplois.html" class="active">Emplois</a>
         </div>
 	<p> 
+    <div class="jobs">    
     <h1> 
         <strong>Urgent - Apprentus recrute des professeurs H/F</strong>
     </h1>
@@ -75,5 +76,6 @@
         
         Créez gratuitement votre profil en ligne en mentionnant vos disponibilités. Fixer librement le prix de vos cours selon vos compétences.</h3>   
     </p>
+    </div>
 </body>
 </html>
