--- a/emploi2.html
+++ b/emploi2.html
@@ -21,6 +21,7 @@
             <a href="messagerie.html">Messagerie</a>
             <a href="emplois.html" class="active">Emplois</a>
         </div>
+        <div class="jobs">
         <h1> 
             <strong>Stage - 6 mois - Assistant données personnel F/H Paris</strong>
         </h1>
@@ -63,5 +64,6 @@
             
         </h3>   
         </p>
+        </div>
 </body>
 </html>
