--- a/emploi3.html
+++ b/emploi3.html
@@ -21,6 +21,7 @@
             <a href="messagerie.html">Messagerie</a>
             <a href="emplois.html" class="active">Emplois</a>
         </div>
+        <div class="jobs">
         <h1> 
             <strong>Chargé de Communication Direction de l'Enseignement H/F</strong>
         </h1>
@@ -85,5 +86,7 @@
             Ref : 20865371
         </h3>   
         </p>
+        </div>
+    
 </body>
 </html>
