--- a/emploi4.html
+++ b/emploi4.html
@@ -21,6 +21,7 @@
             <a href="messagerie.html">Messagerie</a>
             <a href="emplois.html" class="active">Emplois</a>
         </div>
+        <div class="jobs">
         <h1> 
             <strong>Web Design Engineer</strong>
         </h1>
@@ -146,5 +147,6 @@ The OECD is an equal opportunity employer and welcomes the applications of all q
 The OECD promotes an optimal use of resources in order to improve its efficiency and effectiveness. Staff members are encouraged to actively contribute to this goal.
     </h3>   
     </p>
+    </div>
 </body>
 </html>
