--- a/emploi5.html
+++ b/emploi5.html
@@ -21,6 +21,7 @@
             <a href="messagerie.html">Messagerie</a>
             <a href="emplois.html" class="active">Emplois</a>
         </div>
+        <div class="jobs">
         <h1> 
             <strong>Ingénieur d'affaires IT (H/F)</strong>
         </h1>
@@ -110,5 +111,6 @@ Nos différences sont nos atouts. C’est pourquoi Meritis s'implique en faveur 
 Nous sommes à votre écoute. Vous pouvez contacter ethiquegroup@meritis.fr si vous pensez être victime ou témoin d’une discrimination
         </h3>   
         </p>
+        </div>
 </body>
 </html>
