--- a/accueil.html
+++ b/accueil.html
@@ -16,7 +16,7 @@
         </div>
         <div class="navigation">
             <a href="accueil.html" class="active">Accueil</a>
-            <a href="mon_reseau.html">Mon Reseau</a>
+            <a href="reseaux.html">Mon Reseau</a>
             <a href="vous.html">Vous</a>
             <a href="notifications.html">Notifications</a>
             <a href="messagerie.html">Messagerie</a>
