--- a/vous.html
+++ b/vous.html
@@ -3,36 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Votre Profil | ECE In</title>
+    <title>Vous | ECE In</title>
     <link rel="stylesheet" href="vous.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
-    <link rel="icon" type="image/vnd.icon" href="ECE_LOGO_2021_web.ico">
+    <script src="vous.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
         <div class="header">
             <div>ECE In: Social Media Professionnel de l’ECE Paris</div>
-            <img src="ECE_LOGO_2021_web.png" alt="ECE In Logo">
+            <img src="C:\wamp64\www\PROJET_v1\PROJET\ECE_LOGO_2021_web.png" alt="ECE In Logo">
         </div>
         <div class="navigation">
             <a href="accueil.html">Accueil</a>
-            <a href="reseaux.html">Mon Réseau</a>
+            <a href="mon_reseau.html">Mon Reseau</a>
             <a href="vous.html" class="active">Vous</a>
             <a href="notifications.html">Notifications</a>
             <a href="messagerie.html">Messagerie</a>
             <a href="emplois.html">Emplois</a>
         </div>
+
         <div class="profile-grid">
             <div class="profile-info">
                 <h2>Photo de profil</h2>
                 <p id="pseudoPlaceholder"></p>
                 <input type="file" id="fileInput" accept="image/*" style="display: none;">
                 <button onclick="document.getElementById('fileInput').click();">Choisir une photo</button>
+                <img id="profileImage" alt="Profile Image">
                 <div id="entryList">
-                    <h3>Formations</h3>
-                    <ul id="formationList"></ul>
-                    <h3>Projets</h3>
-                    <ul id="projetList"></ul>
+                    <h3>Formations et Projets</h3>
                 </div>
             </div>
             <div class="add-entry">
@@ -55,7 +53,7 @@
             </div>
             <div class="generate-cv">
                 <h2>Création du CV</h2>
-                <button onclick="loadEntriesFromXML()">Générer mon CV</button>
+                <button onclick="generateCV()">Générer mon CV</button>
                 <div id="cvOutput" style="display:none;">
                     <h2>Mon CV</h2>
                     <div id="cvContent"></div>
@@ -74,60 +72,57 @@
             }
         }
 
+        document.getElementById('fileInput').addEventListener('change', displaySelectedImage);
+
         function displaySelectedImage(event) {
             const selectedFile = event.target.files[0];
             const profileImage = document.getElementById('profileImage');
             profileImage.onload = function() {
-                URL.revokeObjectURL(profileImage.src); 
+                URL.revokeObjectURL(profileImage.src);
             }
             profileImage.src = URL.createObjectURL(selectedFile);
         }
 
         function addEntry() {
-            // Logic to add entries
+            const type = document.getElementById('type').value;
+            const description = document.getElementById('description').value;
+            const date = document.getElementById('date').value;
+
+            const entry = document.createElement('div');
+            entry.classList.add('entry');
+            entry.innerHTML = `<strong>${type}</strong>: ${description} (${date})`;
+
+            document.getElementById('entryList').appendChild(entry);
         }
 
-        function loadEntriesFromXML() {
-            fetch('data.xml')
-                .then(response => response.text())
-                .then(data => {
-                    const parser = new DOMParser();
-                    const xmlDoc = parser.parseFromString(data, "text/xml");
-
-                    const formations = [...xmlDoc.getElementsByTagName('formation')];
-                    const projets = [...xmlDoc.getElementsByTagName('projet')];
-
-                    const formationList = document.getElementById('formationList');
-                    const projetList = document.getElementById('projetList');
-
-                    formations.sort((a, b) => new Date(b.getElementsByTagName('date')[0].textContent) - new Date(a.getElementsByTagName('date')[0].textContent));
-                    projets.sort((a, b) => new Date(b.getElementsByTagName('date')[0].textContent) - new Date(a.getElementsByTagName('date')[0].textContent));
-
-                    formationList.innerHTML = ''; // Clear existing list
-                    projetList.innerHTML = ''; // Clear existing list
-
-                    formations.forEach(formation => {
-                        const li = document.createElement('li');
-                        li.textContent = `${formation.getElementsByTagName('date')[0].textContent}: ${formation.getElementsByTagName('description')[0].textContent}`;
-                        formationList.appendChild(li);
-                    });
-
-                    projets.forEach(projet => {
-                        const li = document.createElement('li');
-                        li.textContent = `${projet.getElementsByTagName('date')[0].textContent}: ${projet.getElementsByTagName('description')[0].textContent}`;
-                        projetList.appendChild(li);
-                    });
-
-                    document.getElementById('cvOutput').style.display = 'block'; // Show CV output
-                });
+        function generateCV() {
+            const xhr = new XMLHttpRequest();
+            xhr.open("GET", "cv_data.xml", true);
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState == 4 && xhr.status == 200) {
+                    const xmlDoc = xhr.responseXML;
+                    const formations = Array.from(xmlDoc.getElementsByTagName("formation")).map(formation => `
+                        <li><strong>${formation.getElementsByTagName("titre")[0].textContent}</strong>, ${formation.getElementsByTagName("etablissement")[0].textContent}, ${formation.getElementsByTagName("annee")[0].textContent}</li>
+                    `).join('');
+                    const projets = Array.from(xmlDoc.getElementsByTagName("projet")).map(projet => `
+                        <li><strong>${projet.getElementsByTagName("titre")[0].textContent}</strong>: ${projet.getElementsByTagName("description")[0].textContent} (${projet.getElementsByTagName("annee")[0].textContent})</li>
+                    `).join('');
+                    const cvContent = `
+                        <h2>Mon CV</h2>
+                        <h3>Formations</h3>
+                        <ul>${formations}</ul>
+                        <h3>Projets</h3>
+                        <ul>${projets}</ul>
+                    `;
+                    document.getElementById('cvContent').innerHTML = cvContent;
+                    document.getElementById('cvOutput').style.display = 'block';
+                }
+            };
+            xhr.send();
         }
 
         function downloadPDF() {
-            const { jsPDF } = window.jspdf;
-            const doc = new jsPDF();
-
-            doc.text(document.getElementById('cvContent').innerText, 10, 10);
-            doc.save('CV.pdf');
+            // Logique pour télécharger le CV en PDF
         }
     </script>
 </body>
