elia modif vous

--- a/vous.html
+++ b/vous.html
@@ -6,12 +6,13 @@
     <title>Vous | ECE In</title>
     <link rel="stylesheet" href="vous.css">
     <script src="vous.js" defer></script>
+    <link rel="icon" type="image/vnd.icon" href="ECE_LOGO_2021_web.ico">
 </head>
 <body>
     <div class="wrapper">
         <div class="header">
             <div>ECE In: Social Media Professionnel de l’ECE Paris</div>
-            <img src="C:\wamp64\www\PROJET_v1\PROJET\ECE_LOGO_2021_web.png" alt="ECE In Logo">
+            <img src="ECE_LOGO_2021_web.png" alt="ECE In Logo">
         </div>
         <div class="navigation">
             <a href="accueil.html">Accueil</a>
