elia modif emplois

--- a/emplois.html
+++ b/emplois.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emplois | ECE In</title>
-    <link rel="icon" type="image/vnd.icon" href="C:\wamp64\www\ING2_TD9_EQUIPE2_WD\ECE_LOGO_2021_web.ico">
+    <link rel="icon" type="image/vnd.icon" href="ECE_LOGO_2021_web.ico">
     <link rel="stylesheet" href="emplois.css">
 </head>
 <body>
     <div class="wrapper">
         <div class="header">
             <div>ECE In: Social Media Professionnel de l’ECE Paris</div>
-            <img src="C:\wamp64\www\PROJET_v1\PROJET\ECE_LOGO_2021_web.png" alt="ECE In Logo">
+            <img src="ECE_LOGO_2021_web.png" alt="ECE In Logo">
         </div>
         <div class="navigation">
             <a href="accueil.html">Accueil</a>
