--- a/reseaux.html
+++ b/reseaux.html
@@ -17,7 +17,7 @@
         </div>
         <div class="navigation">
             <a href="accueil.html">Accueil</a>
-            <a href="mon_reseau.html" class="active">Mon Réseau</a>
+            <a href="reseaux.html" class="active">Mon Réseau</a>
             <a href="vous.html">Vous</a>
             <a href="notifications.html">Notifications</a>
             <a href="messagerie.html">Messagerie</a>
