--- a/messagerie.html
+++ b/messagerie.html
@@ -34,7 +34,7 @@
         </div>
         <div class="navigation">
             <a href="accueil.html">Accueil</a>
-            <a href="mon_reseau.html">Mon Reseau</a>
+            <a href="reseaux.html">Mon Reseau</a>
             <a href="vous.html">Vous</a>
             <a href="notifications.html">Notifications</a>
             <a href="messagerie.html" class="active">Messagerie</a>
