--- a/notifications.html
+++ b/notifications.html
@@ -16,7 +16,7 @@
         </div>
         <div class="navigation">
             <a href="accueil.html">Accueil</a>
-            <a href="mon_reseau.html">Mon Réseau</a>
+            <a href="reseaux.html">Mon Réseau</a>
             <a href="vous.html">Vous</a>
             <a href="notifications.html" class="active">Notifications</a>
             <a href="messagerie.html">Messagerie</a>
