elia modif vous

--- a/vous.html
+++ b/vous.html
@@ -38,9 +38,9 @@
                 <h2>Ajout de Formations et Projets</h2>
                 <form id="profileForm">
                     <label for="type">Type :</label><br>
-                    <select id="type" name="type" required><br>
-                        <option value="formation">Formation</option><br>
-                        <option value="projet">Projet</option><br>
+                    <select id="type" name="type" required>
+                        <option value="formation">Formation</option>
+                        <option value="projet">Projet</option>
                     </select><br>
 
                     <label for="description">Description :</label><br>
@@ -101,68 +101,45 @@
         }
 
         function generateCV() {
+            // Logic to generate CV
+        }
+
+        function downloadPDF() {
+            // Logic to download PDF
+        }
+
+        function showCV() {
             const xhr = new XMLHttpRequest();
             xhr.open("GET", "data.xml", true);
             xhr.onreadystatechange = function() {
-                if (xhr.readyState == 4 && xhr.status == 200) {
-                    const xmlDoc = xhr.responseXML;
-                    const formations = Array.from(xmlDoc.getElementsByTagName("formation")).map(formation => `
-                        <li><strong>${formation.getElementsByTagName("titre")[0].textContent}</strong>, ${formation.getElementsByTagName("etablissement")[0].textContent}, ${formation.getElementsByTagName("annee")[0].textContent}</li>
-                    `).join('');
-                    const projets = Array.from(xmlDoc.getElementsByTagName("projet")).map(projet => `
-                        <li><strong>${projet.getElementsByTagName("titre")[0].textContent}</strong>: ${projet.getElementsByTagName("description")[0].textContent} (${projet.getElementsByTagName("annee")[0].textContent})</li>
-                    `).join('');
-                    const cvContent = `
-                        <h2>Mon CV</h2>
-                        <h3>Formations</h3>
-                        <ul>${formations}</ul>
-                        <h3>Projets</h3>
-                        <ul>${projets}</ul>
-                    `;
-                    document.getElementById('cvContent').innerHTML = cvContent;
-                    document.getElementById('cvOutput').style.display = 'block';
+                if (xhr.readyState == 4) {
+                    if (xhr.status == 200) {
+                        const xmlDoc = xhr.responseXML;
+                        if (xmlDoc) {
+                            const formations = Array.from(xmlDoc.getElementsByTagName("formation")).map(formation => `
+                                <li><strong>${formation.getElementsByTagName("titre")[0].textContent}</strong>, ${formation.getElementsByTagName("etablissement")[0].textContent}, ${formation.getElementsByTagName("annee")[0].textContent}</li>
+                            `).join('');
+                            const projets = Array.from(xmlDoc.getElementsByTagName("projet")).map(projet => `
+                                <li><strong>${projet.getElementsByTagName("titre")[0].textContent}</strong>: ${projet.getElementsByTagName("description")[0].textContent} (${projet.getElementsByTagName("annee")[0].textContent})</li>
+                            `).join('');
+                            const cvDetailsContent = `
+                                <h2>Formations</h2>
+                                <ul>${formations}</ul>
+                                <h2>Projets</h2>
+                                <ul>${projets}</ul>
+                            `;
+                            document.getElementById('cvDetails').innerHTML = cvDetailsContent;
+                            document.getElementById('cvDetails').style.display = 'block';
+                        } else {
+                            console.error("Erreur : Le fichier XML est vide ou mal formé.");
+                        }
+                    } else {
+                        console.error("Erreur lors du chargement du fichier XML : " + xhr.status);
+                    }
                 }
             };
             xhr.send();
         }
-
-        function downloadPDF() {
-            // Logique pour télécharger le CV en PDF
-        }
-
-        function showCV() {
-    const xhr = new XMLHttpRequest();
-    xhr.open("GET", "data.xml", true);
-    xhr.onreadystatechange = function() {
-        if (xhr.readyState == 4) {
-            if (xhr.status == 200) {
-                const xmlDoc = xhr.responseXML;
-                if (xmlDoc) {
-                    const formations = Array.from(xmlDoc.getElementsByTagName("formation")).map(formation => `
-                        <li><strong>${formation.getElementsByTagName("titre")[0].textContent}</strong>, ${formation.getElementsByTagName("etablissement")[0].textContent}, ${formation.getElementsByTagName("annee")[0].textContent}</li>
-                    `).join('');
-                    const projets = Array.from(xmlDoc.getElementsByTagName("projet")).map(projet => `
-                        <li><strong>${projet.getElementsByTagName("titre")[0].textContent}</strong>: ${projet.getElementsByTagName("description")[0].textContent} (${projet.getElementsByTagName("annee")[0].textContent})</li>
-                    `).join('');
-                    const cvDetailsContent = `
-                        <h2>Formations</h2>
-                        <ul>${formations}</ul>
-                        <h2>Projets</h2>
-                        <ul>${projets}</ul>
-                    `;
-                    document.getElementById('cvDetails').innerHTML = cvDetailsContent;
-                    document.getElementById('cvDetails').style.display = 'block';
-                } else {
-                    console.error("Erreur : Le fichier XML est vide ou mal formé.");
-                }
-            } else {
-                console.error("Erreur lors du chargement du fichier XML : " + xhr.status);
-            }
-        }
-    };
-    xhr.send();
-}
-
     </script>
 </body>
 </html>
