Manon - bouton deconexion

--- a/accueil.html
+++ b/accueil.html
@@ -23,6 +23,9 @@
             <a href="emplois.html">Emplois</a>
         </div>
         <div class="section">
+            <form id="logoutForm" action="logout.php" method="post" style="display:inline;">
+                <button type="submit">Déconnexion</button>
+            </form>
             <h2>Bienvenue sur ECE In</h2>
             <p>ECE In est le réseau social professionnel de l’ECE Paris. Connectez-vous avec vos pairs, découvrez des opportunités de carrière et restez informé des événements importants de notre communauté.</p>
             
