--- a/emplois.html
+++ b/emplois.html
@@ -22,30 +22,38 @@
             <a href="emplois.html" class="active">Emplois</a>
         </div>
     <div class="container">
-        <h1>Ajouter un emploi</h1>
-        <form id="jobForm">
-            <label for="jobTitle">Intitulé du métier :</label>
-            <input type="text" id="jobTitle" name="jobTitle" required>
+        <div class="left-panel">
+            <h2>Liste des emplois</h2>
+            <ul id="jobList">
+                <!-- Les offres d'emplois seront affichées ici -->
+                <li>Offre d'emploi 1</li>
+                <li>Offre d'emploi 2</li>
+                <li>Offre d'emploi 3</li>
+            </ul>
+        </div>
+        <div class="right-panel">
+            <h1>Ajouter un emploi</h1>
+            <form id="jobForm">
+                <label for="jobTitle">Intitulé du métier :</label>
+                <input type="text" id="jobTitle" name="jobTitle" required>
 
-            <label for="contractType">Type de contrat :</label>
-            <select id="contractType" name="contractType" required>
-                <option value="CDD">CDD</option>
-                <option value="CDI">CDI</option>
-                <option value="Stage">Stage</option>
-                <option value="Alternance">Alternance</option>
-            </select>
+                <label for="contractType">Type de contrat :</label>
+                <select id="contractType" name="contractType" required>
+                    <option value="CDD">CDD</option>
+                    <option value="CDI">CDI</option>
+                    <option value="Stage">Stage</option>
+                    <option value="Alternance">Alternance</option>
+                </select>
 
-            <label for="salary">Salaire :</label>
-            <input type="number" id="salary" name="salary" required>
+                <label for="salary">Salaire :</label>
+                <input type="number" id="salary" name="salary" required>
 
-            <label for="location">Localisation :</label>
-            <input type="text" id="location" name="location" required>
+                <label for="location">Localisation :</label>
+                <input type="text" id="location" name="location" required>
 
-            <button type="submit">Ajouter l'emploi</button>
-        </form>
-
-        <h2>Liste des emplois</h2>
-        <ul id="jobList"></ul>
+                <button type="submit">Ajouter l'emploi</button>
+            </form>
+        </div>
     </div>
 
     <script src="emplois.js"></script>
