Manon - création d'un compte

--- a/menu.html
+++ b/menu.html
@@ -14,13 +14,8 @@
             <img src="ECE_LOGO_2021_web.png" alt="ECE In Logo">
         </div>
         <div class="navigation">
-            <a href="accueil.html">Accueil</a>
-            <a href="reseaux.html">Mon Reseau</a>    
-            <a href="vous.html">Vous</a>
-            <a href="notifications.html">Notifications</a>
-            <a href="messagerie.html">Messagerie</a>
-            <a href="emplois.html">Emplois</a>
-            
+            <a href="inscription.html">Inscription</a>
+            <a href="login.html">Connexion</a>
         </div>
         <div class="section">
             <h2>Connexion</h2>
