--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion - ECE In</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="accueil.css">
     <link rel="icon" type="image/vnd.icon" href="ECE_LOGO_2021_web.ico">
 </head>
 <body>
@@ -24,7 +24,7 @@
                 <br>
                 <label for="username">Pseudo:</label>
                 <input type="text" id="username" name="username" required>
-                <button type="submit">S'inscrire</button>
+                <button type="submit">Se connecter</button>
             </form>        </div>
         <div class="footer">
             
