--- a/emplois.html
+++ b/emplois.html
@@ -6,6 +6,19 @@
     <title>Emplois | ECE In</title>
     <link rel="icon" type="image/vnd.icon" href="ECE_LOGO_2021_web.ico">
     <link rel="stylesheet" href="emplois.css">
+    <style>
+        .notification {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #28a745;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <div class="wrapper">
@@ -21,41 +34,43 @@
             <a href="messagerie.html">Messagerie</a>
             <a href="emplois.html" class="active">Emplois</a>
         </div>
-    <div class="container">
-        <div class="left-panel">
-            <h2>Liste des emplois</h2>
-            <ul id="jobList">
-                <!-- Les offres d'emplois seront affichées ici -->
-                <li>Offre d'emploi 1</li>
-                <li>Offre d'emploi 2</li>
-                <li>Offre d'emploi 3</li>
-            </ul>
+        <div class="container">
+            <div class="left-panel">
+                <h2>Liste des emplois</h2>
+                <ul id="jobList">
+                    <!-- Les offres d'emplois seront affichées ici -->
+                    <li>Offre d'emploi 1</li>
+                    <li>Offre d'emploi 2</li>
+                    <li>Offre d'emploi 3</li>
+                </ul>
+            </div>
+            <div class="right-panel">
+                <h1>Ajouter un emploi</h1>
+                <form id="jobForm">
+                    <label for="jobTitle">Intitulé du métier :</label>
+                    <input type="text" id="jobTitle" name="jobTitle" required>
+
+                    <label for="contractType">Type de contrat :</label>
+                    <select id="contractType" name="contractType" required>
+                        <option value="CDD">CDD</option>
+                        <option value="CDI">CDI</option>
+                        <option value="Stage">Stage</option>
+                        <option value="Alternance">Alternance</option>
+                    </select>
+
+                    <label for="salary">Salaire :</label>
+                    <input type="number" id="salary" name="salary" required>
+
+                    <label for="location">Localisation :</label>
+                    <input type="text" id="location" name="location" required>
+
+                    <button type="submit">Ajouter l'emploi</button>
+                </form>
+            </div>
         </div>
-        <div class="right-panel">
-            <h1>Ajouter un emploi</h1>
-            <form id="jobForm">
-                <label for="jobTitle">Intitulé du métier :</label>
-                <input type="text" id="jobTitle" name="jobTitle" required>
 
-                <label for="contractType">Type de contrat :</label>
-                <select id="contractType" name="contractType" required>
-                    <option value="CDD">CDD</option>
-                    <option value="CDI">CDI</option>
-                    <option value="Stage">Stage</option>
-                    <option value="Alternance">Alternance</option>
-                </select>
+        <div id="notification" class="notification">Nouvelle offre d'emploi ajoutée !</div>
 
-                <label for="salary">Salaire :</label>
-                <input type="number" id="salary" name="salary" required>
-
-                <label for="location">Localisation :</label>
-                <input type="text" id="location" name="location" required>
-
-                <button type="submit">Ajouter l'emploi</button>
-            </form>
-        </div>
-    </div>
-
-    <script src="emplois.js"></script>
-</body>
-</html>
+        <script src="emplois.js"></script>
+    </body>
+    </html>
