elia modif emplois

--- a/emplois.html
+++ b/emplois.html
@@ -16,7 +16,7 @@
             color: white;
             padding: 10px;
             border-radius: 5px;
-            display: none;
+            z-index: 1000;
         }
     </style>
 </head>
@@ -69,8 +69,6 @@
             </div>
         </div>
 
-        <div id="notification" class="notification">Nouvelle offre d'emploi ajoutée !</div>
-
         <script src="emplois.js"></script>
     </body>
-    </html>
+</html>
